--- a/style.css
+++ b/style.css
@@ -223,8 +223,8 @@
             .txt-container{ 
               display: block;
               text-align: center;
-              margin: 60px;
-              padding: 10px;
+              margin: 0;
+              padding: 0;
               margin-top: 0;
             }
 
