--- a/style.css
+++ b/style.css
@@ -288,16 +288,16 @@
             font-size: 2rem;
             margin: 10px auto;
             padding: 0;
-            /* top: 50%; */
+            line-height: 1;
+            
           
           }
         
-        /* .title-2 {
-          font-size: 1.5rem;
+        .title-2 {
           margin: 0;
           padding: 0;
           line-height: 2;
-        } */
+        }
            
       
       
@@ -481,6 +481,11 @@
     padding-top: 60px;
   }
 
+  .prv-content{
+    padding-left: 20px;
+    padding-bottom: 50px;
+  }
+
   /* .pro-title{
     font-size: 2rem;
     margin-bottom: 30px;
@@ -497,6 +502,79 @@
     height: 26rem;
     padding-left: 30px;
   } */
+
+  /* PREVIOUS PROJECT SLIDER IMGS */
+  .slider{
+    width: 100%;
+    height: 500px;
+    overflow: hidden;
+}
+
+figure{
+    position: relative;
+    left: 0;
+    width: 400%; /* width dikali slide */
+    animation: 10s slide infinite;
+}
+
+.slide{
+    position: relative;
+    width: 25%; /* width dibagi slide */
+    float: left;
+}
+
+
+
+
+.slide img{
+    width: 350px;
+    height: 350px;
+}
+
+@keyframes slide{
+    0%{
+        left:0;
+    }
+    10%{
+        left:0;
+    }
+    20%{
+        left:-100%;
+    }
+    30%{
+        left:-100%;
+    }
+    40%{
+        left:-200%;
+    }
+    50%{
+        left:-200%;
+    }
+    55%{
+        left:-300%;
+    }
+    65%{
+        left:-300%;
+    }
+    66%{
+        left:-200%;
+    }
+    74%{
+        left:-200%;
+    }
+    75%{
+        left:-100%;
+    }
+    85%{
+        left:-100%;
+    }
+    90%{
+        left:0;
+    }
+    1000%{
+        left:0;
+    }
+}
 
 
 
@@ -651,3 +729,5 @@
 
   
 }
+
+
