--- a/style.css
+++ b/style.css
@@ -969,11 +969,11 @@ footer .card {
 }
 .name {
   font-weight: bold;
-  color: rgb(255, 255, 255);
+  color: black;
 }
 
 .posting{
-  color: rgb(255, 255, 255);
+  color: black;
 }
 
 
